# nutca

./: Cargo.toml
src/: lib.rs  main.rs
src/calculation/: composition.rs  desired_profile.rs  mod.rs  nutrient.rs  profile.rs  requirement.rs  result_profile.rs  solver.rs
src/chemistry/: element.rs  mod.rs  nutrient.rs  nutrient_amount.rs  nutrients.rs  symbol.rs  table.rs  volume.rs  volume_units.rs
src/chemistry/formulas/: compound.rs  element.rs  formula.rs  tokenizer.rs
src/controller/: error.rs  mod.rs  toaster.rs  validation.rs
src/controller/fertilizers/: dashboard.rs  fertilizer_editor.rs  fertilizers_listing.rs  mod.rs
src/fertilizers/: component.rs  fertilizer.rs  fertilizer_builder.rs  formula.rs  label.rs  label_component.rs  label_units.rs  mod.rs  nutrient.rs  nutrient_percent.rs  source.rs  source_composition.rs  units.rs
src/formula/: builder.rs  component.rs  formula.rs  formula_component.rs  mod.rs  tokenizer.rs
src/model/: error.rs  mod.rs  notification_container.rs
src/profiles/: profile.rs  profile_builder.rs
src/repository/: concentrates.rs  error.rs  fertilizers.rs  mod.rs  profiles.rs  solutions.rs  storage.rs
src/solutions/: calculation.rs  fertilizer_weight.rs  fertilizers_set.rs  mod.rs  nutrient_result.rs  solution.rs  solution_builder.rs  solver.rs  stock_solution_builder.rs
src/storage/: articles.rs  articles_storage.rs  error.rs  fertilizers.rs  fertilizers_storage.rs  mod.rs  profiles.rs  profiles_storage.rs  provider.rs  solutions.rs  solutions_storage.rs  storage.rs
src/ui/: app.rs  layout.rs  mod.rs  router.rs
(+488 files in other folders)
