[package]
name = "nutca-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.5", features = ["desktop"] }
dioxus-router = "0.5.0"
manganis = "0.2.2"
rusqlite = "0.31.0"
serde = "1.0.203"
serde_json = "1.0.117"
nutca = { git = "https://github.com/smrnwow/nutca.git" }

[features]
desktop = ["dioxus/desktop"]
