[package]
name = "nutca"
version = "0.1.0"
edition = "2021"
description = "nutrient calculator for hydroponics"

[package.metadata.bundle]
identifier = "com.nutca"
short_description = "nutrient calculator for hydroponics"
resources = ["src/ui/assets/fonts"]

[dependencies]
dioxus = { version = "0.5.2", features = ["desktop"] }
dioxus-router = "0.5.0"
rusqlite = "0.31.0"
serde = "1.0.203"
serde_json = "1.0.117"
ellp = "0.2.0"
chemp = "0.9.6"
uuid = { version = "1.8.0", features = ["v4"] }

[features]
desktop = ["dioxus/desktop"]
